compilador/Test/Cases/should-fail/test_propios_Err_Type_8.pcf
let resta : Nat -> Nat -> Nat = fix (resta : Nat -> Nat -> Nat) (m : Nat -> Nat) -> fun (n : Nat) -> ifz n then m else pred(resta m (pred n))